--- a/main/adminBuilder/snippets/stories/table.html
+++ b/main/adminBuilder/snippets/stories/table.html
@@ -1,52 +1,55 @@
 {{define "table"}}
-    <!-- /.row -->
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    {{ .caption }}
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    <table width="100%" class="table table-striped table-bordered table-hover" name="{{ .fullFieldName }}" id="dataTables-example">
-                        <thead>
-                        <tr>
-                            {{ range $key, $value := .columnTitles }}
-                                <th>{{ $value }}</th>
-                            {{end}}
-                        </tr>
-                        </thead>
-                        <tbody class="dinamic-content">
-
-                        </tbody>
-                    </table>
-                    <!-- /.table-responsive -->
-                    <div class="well">
-                        <h4>DataTables Usage Information</h4>
-                        <p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
-                        <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
+    {{ if ._isAction }}
+        <!-- /.row -->
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        {{ .caption }}
                     </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+    {{end}}
+                        <table width="100%" class="table table-striped table-bordered table-hover" id="{{ ._fullFieldName }}">
+                            <thead>
+                            <tr>
+                                {{ range $key, $value := ._columnTitles }}
+                                    <th>{{ $value }}</th>
+                                {{end}}
+                            </tr>
+                            </thead>
+                            <tbody class="dinamic-content">
+
+                            </tbody>
+                        </table>
+    {{ if ._isAction }}
+                    </div>
+                    <!-- /.panel-body -->
                 </div>
-                <!-- /.panel-body -->
+                <!-- /.panel -->
             </div>
-            <!-- /.panel -->
+            <!-- /.col-lg-12 -->
         </div>
-        <!-- /.col-lg-12 -->
-    </div>
-    <script>
-        $(function() {
-            //alert(location.href);
-            //var q = Url.getQuery(location.href);
-            //console.log(Url.parseQuery(q));
-            $.ajax({
-                url: "{{ URL .initUrl }}",
-                method: "POST",
-                data: Url.getQuery(location.href),
-                dataType: "json",
-                success: function(data) {
-                    console.log(data);
-                }
+        <script>
+            $(function() {
+                let fieldsDescription = {{ JSON ._fieldsDescription }};
+                $.ajax({
+                    url: "{{ URL ._initUrl }}",
+                    method: "POST",
+                    data: Url.getQuery(location.href),
+                    dataType: "json",
+                    success: function(data) {
+                        if (data['status'] === null) {
+                            var buff = transformToHtml(data['data']['{{ ._fieldName }}'], '{{ ._fullFieldName }}', fieldsDescription);
+                            $('#{{ ._fullFieldName }} > .dinamic-content').append(buff);
+                            $('#{{ ._fullFieldName }}').DataTable({
+                                responsive: true,
+                            });
+                        }
+                        console.log(data);
+                    }
+                });
             });
-        });
-    </script>
+        </script>
+    {{end}}
 {{end}}
