Updated some snippets

--- a/main/adminBuilder/snippets/core/button.html
+++ b/main/adminBuilder/snippets/core/button.html
@@ -98,5 +98,10 @@
             }
         }
     });
+    {{ if ._withLoadDataScript }}
+            $(function () {
+                adminBuilder.setActionLoadingStatus('{{ ._actionName }}', true);
+            });
+    {{ end }}
 </script>
 {{end}}
