--- a/main/adminBuilder/snippets/core/action.html
+++ b/main/adminBuilder/snippets/core/action.html
@@ -7,7 +7,7 @@
     <!-- /.row -->
         <div class="row" name="actionRow_{{ ._actionName }}" style="margin-top: 10px">
             <div class="col-lg-12">
-                <div name="actionPanel_{{ ._actionName }}" class="panel panel-default">
+                <div name="actionPanel_{{ ._actionName }}" class="panel panel-default" style="overflow-x: scroll;">
                     <div class="panel-heading">
                         {{ ._actionTitle }}
                     </div>
