--- a/main/adminBuilder/snippets/core/tabs.html
+++ b/main/adminBuilder/snippets/core/tabs.html
@@ -24,7 +24,7 @@
                     success: function (data) {
                         data = data['data'];
                         if (data[adminBuilder.RESPONSE_FIELD] === undefined || data[adminBuilder.RESPONSE_FIELD]['status'] === undefined || data[adminBuilder.RESPONSE_FIELD]['status'] != 1) { // Успех
-                            var buff = adminBuilder.transformToHtml(data, '{{ ._fullFieldName }}', fieldsDescription);
+                            var buff = adminBuilder.transformToHtml(data, '{{ ._fullFieldName }}', fieldsDescription, true);
                             $('#{{ ._fullFieldName }} > .dynamic-content').empty();
                             $('#{{ ._fullFieldName }} > .dynamic-content').append(buff);
                             let menuItem = $('#{{ ._fullFieldName }} > .nav .active>a');
@@ -33,10 +33,11 @@
                             } else {
                                 $('#{{ ._fullFieldName }} > .dynamic-content .tab-pane:first').addClass("active in");
                             }
-                            adminBuilder.setActionLoadingStatus('{{ ._actionName }}', true);
                         } else { // Неудача
+                            $('#{{ ._fullFieldName }}').html('<text style="color: #ff0000">Error: </text>' + data.adminBuilder.error);
                             console.log(data);
                         }
+                        adminBuilder.setActionLoadingStatus('{{ ._actionName }}', true);
                     }
                 });
             });
